fdo#72916 correct rounding of time part of DateTime

Change-Id: I135478755f9e5a844119129b470fef8de2cd0409